# rplayer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs
src/app/: app.rs  mod.rs  mode.rs
src/audio/: mod.rs  player.rs  seekable_source.rs
src/config/: settings.rs
src/input/: handler.rs
src/lyrics/: mod.rs  parser.rs  sync.rs
src/ui/: help.rs  layout.rs  lyrics.rs  message.rs  mod.rs  playlist.rs  search.rs  statusbar.rs  switch_cache.rs  theme.rs  utils.rs
