[package]
name = "rplayer"
version = "0.1.0"
edition = "2021"
description = "A TUI local music player with lyrics display and Vim-style keybindings"
authors = ["rplayer"]
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Audio
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }

# Metadata
lofty = "0.21"

# Config
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utils
anyhow = "1.0"
walkdir = "2.5"
dirs = "6.0"
unicode-width = "0.2"
clap = { version = "4.5", features = ["derive"] }
rand = "0.9"

[profile.release]
opt-level = 3
lto = true
strip = false